http/1.5/modules/ROOT/pages/http-connector-examples.adoc
= HTTP Connector Examples - Mule 4
:keywords: anypoint, connectors, transports

To fully benefit from using Anypoint Connector for HTTP (HTTP Connector), see the following examples of configuring the connector both in Anypoint Studio and Design Center.


== HTTP Connector Studio Examples
The following examples illustrate how to configure the connector in Anypoint Studio:

* xref:http-start-app-brows-task.adoc[Start an App from a Browser] +
Configure the HTTP Listener operation to start an app from a browser.
* xref:http-consume-web-svc-task.adoc[Consume a REST Service] +
Configure both the HTTP Listener and HTTP Request operations to consume a REST service.
* xref:http-load-static-res-task.adoc[Load a Static Resource] +
Configure both the HTTP Listener and HTTP Load Static Resource operations to load a static resource.
* xref:http-conn-route-diff-paths-task.adoc[Route HTTP Requests to Different Paths] +
Configure the HTTP Listener operation and Logger component to route HTTP requests to different paths.
*  xref:http-route-methods-based-task.adoc[Route Requests Based on HTTP Method] +
Configure the HTTP Listener to route requests based on HTTP methods.
* xref:http-post-form-task.adoc[Post a Form] +
Configure the HTTP Listener, Choice Router and Set Payload components to post a form by sending HTTP requests.
*  xref:http-error-status-reason-phrase-task.adoc[Set HTTP Error Status and Reason] +
Configure the HTTP Listener operation, and Validation Module, Set Payload and Error Handler components to set the error status code and reason phrase for a user login validation request.

== HTTP Connector Design Center Examples
The following examples illustrate how to configure the connector in Design Center:

* xref:http-trigger-app-from-browser.adoc[Start an App from a Browser] +
Use Design Center to configure the HTTP Listener operation to start an app from a browser.
* xref:http-consume-web-service.adoc[Consume a REST Service] +
Use Design Center to configure both the HTTP Listener and HTTP Request operations to consume a REST service.
* xref:http-create-https-listener.adoc[Create an HTTPS Listener] +
Use Design Center to configure the HTTP Listener secured by TLS 1.2 to start an app.
* xref:http-basic-auth-task.adoc[Set Up Basic Authentication] +
Use Design Center to configure the HTTP Listener and HTTP Request operations, and the Basic authentication, to provide a user name and password when making a request.
