http/1.9/modules/ROOT/pages/http-connector-examples.adoc
= HTTP Connector Examples - Mule 4
:keywords: anypoint, connectors, transports
:page-aliases: connectors::http/http-consume-web-service.adoc, connectors::http/http-basic-auth-task.adoc, connectors::http/http-create-https-listener.adoc,  connectors::http/http-trigger-app-from-browser.adoc, connectors::http/http-about-http-connector.adoc


To fully benefit from using Anypoint Connector for HTTP (HTTP Connector), see the following examples of configuring the connector in Anypoint Studio.


== HTTP Connector Studio Examples
The following examples illustrate how to configure the connector in Anypoint Studio:

* xref:http-start-app-brows-task.adoc[Start an App from a Browser] +
Configure the HTTP *Listener* operation to start an app from a browser.
* xref:http-consume-web-svc-task.adoc[Consume a REST Service] +
Configure both the HTTP *Listener* and HTTP *Request* operations to consume a REST service.
* xref:http-load-static-res-task.adoc[Load a Static Resource] +
Configure both the HTTP *Listener* and HTTP *Load static resource* operations to load a static resource.
* xref:http-conn-route-diff-paths-task.adoc[Route HTTP Requests to Different Paths] +
Configure the HTTP *Listener* operation and *Logger* component to route HTTP requests to different paths.
*  xref:http-route-methods-based-task.adoc[Route Requests Based on HTTP Method] +
Configure the HTTP *Listener* source to route requests based on HTTP methods.
* xref:http-post-form-task.adoc[Post a Form] +
Configure the HTTP *Listener* source, *Choice Router* and *Set Payload* components to post a form by sending HTTP requests.
*  xref:http-error-status-reason-phrase-task.adoc[Set HTTP Error Status and Reason] +
Configure the HTTP *Listener* source and the *Validation Module*, *Set Payload*, and *Error Handler* components to set the error status code and reason phrase for a user login validation request.
*  xref:http-connector-basic-security.adoc[Configure HTTP Basic Security Filter] +
Configure the *Basic Security Filter* operation to enforce basic authentication.
